--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   text-align: center;
 }
+.allCountry {
+  display: grid;
+  grid-template-columns: repeat(3 , 1fr);
+}
 
 .App-logo {
   height: 40vmin;
